<resources>
    <string name="app_name">Welcome to Weatheria</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">"Sunrise: "</string>
    <string name="sunset">"Sunset: "</string>
    <string name="temp">"Temp: "</string>
    <string name="tempHigh">"High: "</string>
    <string name="tempLow">"Low: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zipCodeInstruction">Enter a zip code</string>
    <string name="zip_code" />
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="location">Use My Location</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>
    <string name="notification">Get Notification</string>
    <string name="turn_notification_on">Notification On</string>
    <string name="turn_notification_off">Notification Off</string>
    <string name="notify_location">Location: %1$s</string>
    <string name="notify_currentTemp">Current Temp: %1$d°</string>
</resources>