<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
      android:id="@+id/city_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/st_paul_mn"
      android:layout_marginTop="12dp"
        android:textSize="18dp"
        android:textColor="@color/black"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="72sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="67dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/temperature"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/thousandssunny"/>

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        android:text="@string/feels_like" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/low"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/feels_like"/>

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/low"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/high"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/humidity"/>





  </androidx.constraintlayout.widget.ConstraintLayout>